<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/border_margin"
        android:text="@string/angry_words"
        android:gravity="center"
        android:textSize="12sp" >
    </TextView>
    
    <TextView
        android:id="@+id/warning_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/border_margin"
        android:layout_marginLeft="35dp"
        android:textSize="12sp" >
        
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/send_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/send_anyways"
            android:textSize="12sp"
            android:background="@android:color/transparent" >
        </Button>

        <Button
            android:id="@+id/edit_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_message"
            android:textSize="12sp"
            android:background="@android:color/transparent" >
        </Button>

	</LinearLayout>

</LinearLayout>